# kaleodoscope

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  ast.cpp  ast.hpp  default.nix  flake.nix  lexer.hpp  main.cpp  makefile  nixpkgs.nix  parser.cpp  parser.hpp  print_visitor.cpp  print_visitor.hpp  repl.cpp  repl.hpp  syntax.md  utils.hpp
code/: codegen.cpp  codegen.hpp
include/: prelude.hpp
ocaml/: main.ml  shell.nix
src/: main.cpp
src/core/: class.cpp  class.hpp  name.cpp  name.hpp  pats.hpp  scheme.hpp  subst.cpp  subst.hpp  type.cpp  type.hpp  var.hpp
syntax/: ast.cpp  ast.hpp  parser.cpp  parser.hpp
test/: CMakeLists.txt  FastString-test.cpp  Kind-test.cpp
utils/: format.hpp  print_visitor.cpp  print_visitor.hpp
